# CogniGate

./: .env.example  .env.standalone.example  .gitignore  CogniGate Spec.txt  Dockerfile  README.md  docker-compose.standalone.yml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  test_standalone.sh
.claude/: CODE REVIEW1.md  CODE_REVIEW_GP_STANDALONE.md  SECURITY_PUNCHLIST.md
config/: mcp.yaml
config/plugins/sinks/: example_sink.py
config/profiles/: default.yaml  github_review.yaml
docs/: OPERATIONS.md
docs/diagrams/: README.md  graceful-shutdown.md  lease-to-receipt-flow.md  receipt-retry-dlq.md  tool-invocation.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml  servicemonitor.yaml
src/cognigate/: __init__.py  ai_client.py  api.py  auth.py  circuit_breaker.py  config.py  executor.py  leasing.py  main.py  metrics.py  models.py  observability.py  prompt.py  receipts.py  tools.py
src/cognigate/middleware/: rate_limit.py
src/cognigate/plugins/: __init__.py  base.py  builtin_sinks.py  mcp_adapter.py
tests/: README.md  __init__.py  conftest.py  test_models.py  test_plugins.py  test_prompt.py  test_security.py
tests/integration/: __init__.py  fixtures.py  test_asyncgate_integration.py  test_job_execution.py
